# pactience

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  run-kimi.sh
.docker/: Dockerfile  compose.yaml
.github/workflows/: ci.yml  gitlab-style-merge.yml  release.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur-bin/: .SRCINFO  PKGBUILD
src/: AGENTS.md  Cargo.toml  INSTRUCTIONS.md  Makefile
src/src/: apply.rs  cache.rs  cli.rs  config.rs  date.rs  db.rs  deps.rs  discovery.rs  error.rs  http.rs  logging.rs  main.rs  model.rs  output.rs  policy.rs  progress.rs  vercmp.rs
src/src/publication/: archive.rs  aur.rs  aur_git.rs  mod.rs
src/tests/: cli.rs
