[package]
name = "pactience"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
description = "Enforce a minimum package age before upgrading Arch Linux packages (pacman/AUR)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/a77ila/pactience"
keywords = ["arch", "pacman", "aur", "linux", "upgrade"]
categories = ["command-line-utilities"]
# Keep build output out of the crate.
exclude = ["/dist"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
ureq = "3"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
